# @(#) $Id$

pixmapdatadir = $(pkgdatadir)/pixmaps
icondatadir = $(datadir)/icons/hicolor/48x48/apps

# Since 2.3: arithmetic data_measure drift immerse merge
# Since 2.7: path_level spectrum iso_roughness grains_measure gl_material
# Since 2.7: color_range_auto color_range_full color_range_fixed
# Since 2.7: color_range_adaptive mask_line
# Since 2.22: mask_fill_draw mask_fill_erase mask_paint_draw mask_paint_erase

# If you add new stock icons here, add them to a `Since' line above and run
# ./utils/stockgen.py from the top-level directory to update source code
# declarations.
pixmapdata_DATA = \
	cd_line.png \
	cd_rline.png \
	cd_rstep.png \
	cd_step.png \
	circle_down.png \
	circle_up.png \
	gwy_3d_base-24.png \
	gwy_arithmetic-24.png \
	gwy_bold-20.png \
	gwy_cantilever-24.png \
	gwy_color_range-24.png \
	gwy_color_range_adaptive-24.png \
	gwy_color_range_auto-24.png \
	gwy_color_range_fixed-24.png \
	gwy_color_range_full-24.png \
	gwy_crop-24.png \
	gwy_cwt-24.png \
	gwy_data_measure-24.png \
	gwy_distance-24.png \
	gwy_drift-24.png \
	gwy_dwt-24.png \
	gwy_edge-24.png \
	gwy_facet_level-24.png \
	gwy_favourite-24.png \
	gwy_fft-24.png \
	gwy_filter-24.png \
	gwy_fix_zero-24.png \
	gwy_flip_horizontally-24.png \
	gwy_flip_vertically-24.png \
	gwy_fractal-24.png \
	gwy_gl_material-16.png \
	gwy_gradient_horizontal-24.png \
	gwy_gradient_vertical-24.png \
	gwy_grains-24.png \
	gwy_grains_graph-24.png \
	gwy_grains_measure-24.png \
	gwy_grains_remove-24.png \
	gwy_grains_water-24.png \
	gwy_graph-24.png \
	gwy_graph_function-24.png \
	gwy_graph_halfgauss-24.png \
	gwy_graph_measure-24.png \
	gwy_graph_palette-24.png \
	gwy_graph_pointer-24.png \
	gwy_graph_ruler-24.png \
	gwy_graph_vertical-24.png \
	gwy_graph_zoom_fit-24.png \
	gwy_graph_zoom_in-24.png \
	gwy_graph_zoom_out-24.png \
	gwy_gwyddion-32.png \
	gwy_gwyddion-60.png \
	gwy_immerse-24.png \
	gwy_iso_roughness-24.png \
	gwy_italic-20.png \
	gwy_less-24.png \
	gwy_level-24.png \
	gwy_level_triangle-24.png \
	gwy_light_rotate-24.png \
	gwy_line_level-24.png \
	gwy_logscale_horizontal-24.png \
	gwy_logscale_vertical-24.png \
	gwy_mask-16.png \
	gwy_mask-24.png \
	gwy_mask_add-24.png \
	gwy_mask_circle-24.png \
	gwy_mask_circle_exclusive-24.png \
	gwy_mask_circle_inclusive-24.png \
	gwy_mask_editor-24.png \
	gwy_mask_exclude-24.png \
	gwy_mask_exclude_circle-24.png \
	gwy_mask_fill_draw-24.png \
	gwy_mask_fill_erase-24.png \
	gwy_mask_grow-24.png \
	gwy_mask_intersect-24.png \
	gwy_mask_invert-24.png \
	gwy_mask_line-24.png \
	gwy_mask_paint_draw-24.png \
	gwy_mask_paint_erase-24.png \
	gwy_mask_rect_exclusive-24.png \
	gwy_mask_rect_inclusive-24.png \
	gwy_mask_remove-24.png \
	gwy_mask_shrink-24.png \
	gwy_mask_subtract-24.png \
	gwy_merge-24.png \
	gwy_more-24.png \
	gwy_palettes-16.png \
	gwy_palettes-24.png \
	gwy_path_level-24.png \
	gwy_pointer_measure-24.png \
	gwy_polynom-24.png \
	gwy_profile-24.png \
	gwy_remove_under_mask-24.png \
	gwy_rotate-24.png \
	gwy_rotate_180-24.png \
	gwy_rotate_90_ccw-24.png \
	gwy_rotate_90_cw-24.png \
	gwy_scale-24.png \
	gwy_scale_horizontally-24.png \
	gwy_scale_vertically-24.png \
	gwy_scars-24.png \
	gwy_selections-24.png \
	gwy_shader-24.png \
	gwy_spectrum-24.png \
	gwy_spot_remove-24.png \
	gwy_stat_quantities-24.png \
	gwy_subscript-20.png \
	gwy_superscript-20.png \
	gwy_unrotate-24.png \
	gwy_value_invert-24.png \
	gwy_zoom_1_1-24.png \
	gwy_zoom_fit-24.png \
	gwy_zoom_in-24.png \
	gwy_zoom_out-24.png \
	gwyddion.ico \
	splash.png

icondata_DATA = \
	gwyddion.png

# Note: splash screen source is too big to distribute in every tarball,
# check it out from Subversion
xcf_sources = \
	cd_line.xcf \
	cd_rline.xcf \
	cd_rstep.xcf \
	cd_step.xcf \
	gwy_3d_base-24.xcf \
	gwy_arithmetic-24.xcf \
	gwy_cantilever-24.xcf \
	gwy_color_range-24.xcf \
	gwy_crop-24.xcf \
	gwy_direction-24.xcf \
	gwy_edge-24.xcf \
	gwy_fft-24.xcf \
	gwy_filter-24.xcf \
	gwy_flip_horizontally-24.xcf \
	gwy_flip_vertically-24.xcf \
	gwy_gl_material-16.xcf \
	gwy_gradient-24.xcf \
	gwy_grains-24.xcf \
	gwy_graph-24.xcf \
	gwy_graph_zoom-24.xcf \
	gwy_iso_roughness-24.xcf \
	gwy_less-24.xcf \
	gwy_level-24.xcf \
	gwy_light_rotate-24.xcf \
	gwy_markup-20.xcf \
	gwy_mask-16.xcf \
	gwy_mask-24.xcf \
	gwy_measure-24.xcf \
	gwy_more-24.xcf \
	gwy_palette-24.xcf \
	gwy_palettes-16.xcf \
	gwy_polynom-24.xcf \
	gwy_profile-24.xcf \
	gwy_remove_under_mask-24.xcf \
	gwy_rotate-24.xcf \
	gwy_rotate_180-24.xcf \
	gwy_rotate_90_ccw-24.xcf \
	gwy_rotate_90_cw-24.xcf \
	gwy_scale-24.xcf \
	gwy_scale_horizontally-24.xcf \
	gwy_scale_vertically-24.xcf \
	gwy_selection-24.xcf \
	gwy_shader-24.xcf \
	gwy_spectrum-24.xcf \
	gwy_spot_remove-24.xcf \
	gwy_stat_quantities-24.xcf \
	gwy_unrotate-24.xcf \
	gwy_value_invert-24.xcf \
	gwy_zoom-24.xcf

EXTRA_DIST = \
	gwyddion.icns \
	$(icondata_DATA) \
	$(pixmapdata_DATA) \
	$(xcf_sources)

