# @(#) $Id$

glmaterialdatadir = $(pkgdatadir)/glmaterials

glmaterialdata_DATA = \
	Alien-Alloy \
	Black-Plastic \
	Black-Rubber \
	Brass \
	Bright-White \
	Bronze \
	Chrome \
	Coolish-White \
	Copper \
	Cyan-Plastic \
	Cyan-Rubber \
	Emerald \
	Gold \
	Green-Plastic \
	Green-Rubber \
	Jade \
	Obsidian \
	Pearl \
	Pewter \
	Polished-Bronze \
	Polished-Copper \
	Polished-Gold \
	Red-Plastic \
	Red-Rubber \
	Ruby \
	Silver \
	Turquoise \
	Warmish-White \
	White-Plastic \
	White-Rubber \
	Yellow-Plastic \
	Yellow-Rubber

EXTRA_DIST = \
	makefile.msc \
	makefile.msc.gwt \
	$(glmaterialdata_DATA)
