# @(#) $Id$

gradientdatadir = $(pkgdatadir)/gradients

gradientdata_DATA = \
	BW1 \
	BW2 \
	Blue \
	Blue-Cyan \
	Blue-Violet \
	Blue-Yellow \
	Body \
	Cold \
	DFit \
	Gold \
	Green \
	Green-Cyan \
	Green-Violet \
	Green-Yellow \
	Lines \
	Olive \
	Pink \
	Pm3d \
	Rainbow1 \
	Rainbow2 \
	Red \
	Red-Cyan \
	Red-Violet \
	Red-Yellow \
	Sky \
	Spectral \
	Spring \
	Warm \
	Yellow

EXTRA_DIST = \
	makefile.msc \
	$(gradientdata_DATA)
