# @(#) $Id$

gradientdatadir = $(pkgdatadir)/gradients

gradientdata_DATA = \
	BW1 \
	BW2 \
	Blend1 \
	Blend2 \
	Blue \
	Blue-Cyan \
	Blue-Violet \
	Blue-Yellow \
	Body \
	Caribbean \
	Cold \
	DFit \
	Digitalis \
	Gold \
	Green \
	Green-Cyan \
	Green-Stripes-4 \
	Green-Violet \
	Green-Yellow \
	Halcyon \
	Lines \
	Maple \
	Neon \
	Olive \
	Pink \
	Plum \
	Pm3d \
	Rainbow1 \
	Rainbow2 \
	Red \
	Red-Cyan \
	Red-Stripes-5 \
	Red-Violet \
	Red-Yellow \
	Rust \
	Saw1 \
	Shame \
	Sky \
	Sm2 \
	Spectral \
	Spring \
	Warm \
	Yellow \
	Zones

EXTRA_DIST = \
	makefile.msc \
	makefile.msc.gwt \
	$(gradientdata_DATA)
