# @(#) $Id$

gradientdatadir = $(pkgdatadir)/gradients

gradientdata_DATA = \
	BW1 \
	BW2 \
	Blend1 \
	Blend2 \
	Blue \
	Blue-Cyan \
	Blue-Violet \
	Blue-Yellow \
	Body \
	Caribbean \
	Code-V \
	Cold \
	DFit \
	Digitalis \
	Gold \
	Green \
	Green-Cyan \
	Green-Stripes-4 \
	Green-Violet \
	Green-Yellow \
	Gwyddion.net \
	Halcyon \
	Lines \
	Maple \
	NT-MDT \
	Neon \
	Olive \
	Pink \
	Plum \
	Pm3d \
	Rainbow1 \
	Rainbow2 \
	Red \
	Red-Cyan \
	Red-Stripes-5 \
	Red-Violet \
	Red-Yellow \
	Rust \
	Saw1 \
	Shame \
	Sky \
	Sm2 \
	Spectral \
	Spring \
	Warm \
	Warpp-mono \
	Warpp-spectral \
	Wyko \
	Yellow \
	Zones

EXTRA_DIST = \
	$(gradientdata_DATA)

